@@ -8,6 +8,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.12_01-dev
 
+fix Makefile.PL setting of numeric $User/$Group for 'make test'
+[Michael K. Sanders <msanders@confusion.net>]
+
 giving PERL_STASH_POST_DATA=1 to Makefile.PL will save 
 read(STDIN, ...)/$r->read data in $r->subprocess_env for logging 
 
